--- a/w2verifica.html
+++ b/w2verifica.html
@@ -270,7 +270,17 @@
             </section>
 
 
-            <section class="section-right"></section>
+            <section class="section-right">
+                <div id="social">
+                    <img src="assets/medium+twitter.png" alt="medium+twitter">
+                    <p>Discover Medium writers you already follow on twitter.</p>
+                    <button class="membership">
+                        <ion-icon name="logo-twitter"></ion-icon>
+                        <span>Connect to Twitter</span>
+                    </button>
+                    <a href="#">Maybe Later</a>
+                </div>
+            </section>
         </section>
     </main>
 </body>
