div icone card footer

--- a/w2verifica.html
+++ b/w2verifica.html
@@ -66,8 +66,10 @@
                                 <li><button>React</button></li>
                                 <li>Popular on medium</li>
                             </ul>
+                            <div>
                             <ion-icon name="bookmark-outline"></ion-icon>
                             <ion-icon name="ellipsis-horizontal-sharp"></ion-icon>
+                        </div>
                         </div> 
                     </div>
                     <div class="immagine">
@@ -98,8 +100,10 @@
                                 <li><button>React</button></li>
                                 <li>Popular on medium</li>
                             </ul>
+                            <div>
                             <ion-icon name="bookmark-outline"></ion-icon>
                             <ion-icon name="ellipsis-horizontal-sharp"></ion-icon>
+                        </div>
                         </div> 
                     </div>
                     <div class="immagine">
@@ -130,8 +134,10 @@
                                 <li><button>React</button></li>
                                 <li>Popular on medium</li>
                             </ul>
+                            <div>
                             <ion-icon name="bookmark-outline"></ion-icon>
                             <ion-icon name="ellipsis-horizontal-sharp"></ion-icon>
+                        </div>
                         </div> 
                     </div>
                     <div class="immagine">
@@ -162,8 +168,10 @@
                                 <li><button>React</button></li>
                                 <li>Popular on medium</li>
                             </ul>
+                            <div>
                             <ion-icon name="bookmark-outline"></ion-icon>
                             <ion-icon name="ellipsis-horizontal-sharp"></ion-icon>
+                        </div>
                         </div> 
                     </div>
                     <div class="immagine">
@@ -194,8 +202,10 @@
                                 <li><button>React</button></li>
                                 <li>Popular on medium</li>
                             </ul>
+                            <div>
                             <ion-icon name="bookmark-outline"></ion-icon>
                             <ion-icon name="ellipsis-horizontal-sharp"></ion-icon>
+                        </div>
                         </div> 
                     </div>
                     <div class="immagine">
@@ -226,8 +236,10 @@
                                 <li><button>React</button></li>
                                 <li>Popular on medium</li>
                             </ul>
+                            <div>
                             <ion-icon name="bookmark-outline"></ion-icon>
                             <ion-icon name="ellipsis-horizontal-sharp"></ion-icon>
+                        </div>
                         </div> 
                     </div>
                     <div class="immagine">
@@ -258,8 +270,10 @@
                                 <li><button>React</button></li>
                                 <li>Popular on medium</li>
                             </ul>
+                            <div>
                             <ion-icon name="bookmark-outline"></ion-icon>
                             <ion-icon name="ellipsis-horizontal-sharp"></ion-icon>
+                        </div>
                         </div> 
                     </div>
                     <div class="immagine">
