--- a/w2verifica.html
+++ b/w2verifica.html
@@ -80,25 +80,23 @@
                 <div class="card"> <!--card2-->
                     <div class="article">
                         <div>
-                            <img src="assets/t8-logo.png" alt="">
-                            <p>Kolby Sisk</p>
-                            <p>in</p>
-                            <p>Udacity Eng & Data</p>
+                            <img src="assets/rebel-logo.jpg" alt="author logo">
+                            <p>Navoda Nilakshi</p>
                         </div>
                         <div>
-                            <h3>React state management in 2022 -- Return of the Redux</h3>
+                            <h3>How To Sanitize Your Express App Against MongoDB Injection & Cross-Site Scripting.</h3>
                         </div>
                         <div>
                             <p>
-                                At the beginning of the year if you told me I'd be publishing a recommendation to use Redux I would have laughed in your face. Yet here we are.
+                                Easiest way to sanitize your express app.
                             </p>
                         </div>
                         <div class="article-footer">
                             <ul>
-                                <li>Dec 3</li>
-                                <li>4 min read</li>
-                                <li><button>React</button></li>
-                                <li>Popular on medium</li>
+                                <li>Dec 19</li>
+                                <li>6 min read</li>
+                                <li><button>Web Development</button></li>
+                                <li>Based on your reading history</li>
                             </ul>
                             <div>
                             <ion-icon name="bookmark-outline"></ion-icon>
@@ -107,7 +105,7 @@
                         </div> 
                     </div>
                     <div class="immagine">
-                        <img src="assets/return.jpg" alt="return of the jedi poster">
+                        <img src="assets/empire-strikes-back.jpg" alt="empire strikes back poster">
                     </div>
                 </div>
 
@@ -115,23 +113,23 @@
                     <div class="article">
                         <div>
                             <img src="assets/t8-logo.png" alt="">
-                            <p>Kolby Sisk</p>
+                            <p>Divyesh Bhalani</p>
                             <p>in</p>
-                            <p>Udacity Eng & Data</p>
+                            <p>DhiWise</p>
                         </div>
                         <div>
-                            <h3>React state management in 2022 -- Return of the Redux</h3>
+                            <h3>React 18 new features and updates</h3>
                         </div>
                         <div>
                             <p>
-                                At the beginning of the year if you told me I'd be publishing a recommendation to use Redux I would have laughed in your face. Yet here we are.
+                                Know about some cool features and updates of React 18.
                             </p>
                         </div>
                         <div class="article-footer">
                             <ul>
-                                <li>Dec 3</li>
+                                <li>Nov 24</li>
                                 <li>4 min read</li>
-                                <li><button>React</button></li>
+                                <li><button>Reactjs</button></li>
                                 <li>Popular on medium</li>
                             </ul>
                             <div>
@@ -141,7 +139,7 @@
                         </div> 
                     </div>
                     <div class="immagine">
-                        <img src="assets/return.jpg" alt="return of the jedi poster">
+                        <img src="assets/a-new-hope.webp" alt="a new hope poster">
                     </div>
                 </div>
 
@@ -154,16 +152,16 @@
                             <p>Udacity Eng & Data</p>
                         </div>
                         <div>
-                            <h3>React state management in 2022 -- Return of the Redux</h3>
+                            <h3>Understanding re-rendering and memoization in React</h3>
                         </div>
                         <div>
                             <p>
-                                At the beginning of the year if you told me I'd be publishing a recommendation to use Redux I would have laughed in your face. Yet here we are.
+                                The following are quick tips to increase performance in your React Application by understanding re-rendering and memoization. To better understand what I'm saying, I'm trying to ellipse this test by making it longer enough.
                             </p>
                         </div>
                         <div class="article-footer">
                             <ul>
-                                <li>Dec 3</li>
+                                <li>Dec 6</li>
                                 <li>4 min read</li>
                                 <li><button>React</button></li>
                                 <li>Popular on medium</li>
@@ -175,7 +173,7 @@
                         </div> 
                     </div>
                     <div class="immagine">
-                        <img src="assets/return.jpg" alt="return of the jedi poster">
+                        <img src="assets/phantom-menace.jpeg" alt="the phantom menace poster">
                     </div>
                 </div>
 
@@ -183,23 +181,23 @@
                     <div class="article">
                         <div>
                             <img src="assets/t8-logo.png" alt="">
-                            <p>Kolby Sisk</p>
+                            <p>Vsevolod Ulyanovich</p>
                             <p>in</p>
-                            <p>Udacity Eng & Data</p>
+                            <p>Fively Blog</p>
                         </div>
                         <div>
-                            <h3>React state management in 2022 -- Return of the Redux</h3>
+                            <h3>15 Best Web App Ideas for a Startup in 2021</h3>
                         </div>
                         <div>
                             <p>
-                                At the beginning of the year if you told me I'd be publishing a recommendation to use Redux I would have laughed in your face. Yet here we are.
+                               15 Startup Ideas and Technologies That Could Make You a Millionaire
                             </p>
                         </div>
                         <div class="article-footer">
                             <ul>
-                                <li>Dec 3</li>
-                                <li>4 min read</li>
-                                <li><button>React</button></li>
+                                <li>Oct 29</li>
+                                <li>6 min read</li>
+                                <li><button>Web Development</button></li>
                                 <li>Popular on medium</li>
                             </ul>
                             <div>
@@ -209,7 +207,7 @@
                         </div> 
                     </div>
                     <div class="immagine">
-                        <img src="assets/return.jpg" alt="return of the jedi poster">
+                        <img src="assets/attack-clones.jpg" alt="attack of the clones poster">
                     </div>
                 </div>
 
@@ -217,24 +215,24 @@
                     <div class="article">
                         <div>
                             <img src="assets/t8-logo.png" alt="">
-                            <p>Kolby Sisk</p>
+                            <p>Arun Kashyap</p>
                             <p>in</p>
-                            <p>Udacity Eng & Data</p>
+                            <p>Nerd for Tech</p>
                         </div>
                         <div>
-                            <h3>React state management in 2022 -- Return of the Redux</h3>
+                            <h3>Why Get Rid Of Primises To Fetch Data in React?</h3>
                         </div>
                         <div>
                             <p>
-                                At the beginning of the year if you told me I'd be publishing a recommendation to use Redux I would have laughed in your face. Yet here we are.
+                                How You Can Make Your Code Well Structured!!
                             </p>
                         </div>
                         <div class="article-footer">
                             <ul>
-                                <li>Dec 3</li>
-                                <li>4 min read</li>
+                                <li>Jun 5</li>
+                                <li>5 min read</li>
                                 <li><button>React</button></li>
-                                <li>Popular on medium</li>
+                                <li>Selected for you</li>
                             </ul>
                             <div>
                             <ion-icon name="bookmark-outline"></ion-icon>
@@ -243,41 +241,7 @@
                         </div> 
                     </div>
                     <div class="immagine">
-                        <img src="assets/return.jpg" alt="return of the jedi poster">
-                    </div>
-                </div>
-
-                <div class="card"> <!--card7-->
-                    <div class="article">
-                        <div>
-                            <img src="assets/t8-logo.png" alt="">
-                            <p>Kolby Sisk</p>
-                            <p>in</p>
-                            <p>Udacity Eng & Data</p>
-                        </div>
-                        <div>
-                            <h3>React state management in 2022 -- Return of the Redux</h3>
-                        </div>
-                        <div>
-                            <p>
-                                At the beginning of the year if you told me I'd be publishing a recommendation to use Redux I would have laughed in your face. Yet here we are.
-                            </p>
-                        </div>
-                        <div class="article-footer">
-                            <ul>
-                                <li>Dec 3</li>
-                                <li>4 min read</li>
-                                <li><button>React</button></li>
-                                <li>Popular on medium</li>
-                            </ul>
-                            <div>
-                            <ion-icon name="bookmark-outline"></ion-icon>
-                            <ion-icon name="ellipsis-horizontal-sharp"></ion-icon>
-                        </div>
-                        </div> 
-                    </div>
-                    <div class="immagine">
-                        <img src="assets/return.jpg" alt="return of the jedi poster">
+                        <img src="assets/revenge-sith.jpg" alt="revenge of the sith poster">
                     </div>
                 </div>
 
@@ -294,6 +258,103 @@
                     </button>
                     <a href="#">Maybe Later</a>
                 </div>
+
+                <div class="right-box" id="tags">
+                    <h4>Recommended topics</h4>
+                    <div>
+                    <button class="tag-button">Technology</button>
+                    <button class="tag-button">Money</button>
+                    <button class="tag-button">Business</button>
+                    <button class="tag-button">Productivity</button>
+                    <button class="tag-button">Psychology</button>
+                    <button class="tag-button">Mindfulness</button>
+                    <button class="tag-button">Art</button>
+                </div>
+                </div>
+
+                <div class="follow">
+                    <h4>Who to follow</h4>
+                     
+                    <div class="person">
+                        <div><img src="assets/chewe.jpg" alt="chewbacca">
+                        </div>
+                        <div>
+                            <p class="name">Chewbacca</p>
+                            <p class="profession">Smuggler, Wookie</p>
+                        </div>
+                        <div class="div-button">
+                            <button class="follow-button">Follow</button>
+                        </div>
+                    </div>
+                    <div class="person">
+                        <div><img src="assets/han-solo.jpg" alt="han-solo">
+                        </div>
+                        <div>
+                            <p class="name">Han Solo</p>
+                            <p class="profession">Smuggler, lady killer, scoundrel</p>
+                        </div>
+                        <div class="div-button">
+                            <button class="follow-button">Follow</button>
+                        </div>
+                    </div>
+                    <div class="person">
+                        <div><img src="assets/vader.jpg" alt="darth vader">
+                        </div>
+                        <div>
+                            <p class="name">Darth Vader</p>
+                            <p class="profession">Sith Lord, The Choosen One, Emperor's right hand</p>
+                        </div>
+                        <div class="div-button">
+                            <button class="follow-button">Follow</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right-box" id="recently-saved">
+                    <h4>Recently saved</h4>
+                   <div class="saved-box">
+                    <div class="autor">
+                        <img src="assets/leia-organa.jpg" alt="leia organa">
+                        <p><span>Princess Leia</span> in <span>Rebel Alliance</span></p>
+                    </div>
+                        <h3>The Feynman Technique Will Make You Remember What You Read</h3>
+                        <div class="infobox">
+                            <div><ul>
+                                <li>Oct 2, 2020</li>
+                                <li>6 min read</li>
+                            </ul>
+                        </div>
+                            <ion-icon name="star"></ion-icon>
+                        </div>
+                    </div>
+
+                   <div class="saved-box">
+                    <div class="autor">
+                        <img src="assets/lando.jpg" alt="lando calrissian">
+                        <p><span>lando calrissian</span></p>
+                    </div>
+                        <h3>Hi.</h3>
+                        <div class="infobox">
+                            <div><ul>
+                                <li>Oct 27, 2020</li>
+                                <li>8 min read</li>
+                            </ul>
+                        </div>
+                            <ion-icon name="star"></ion-icon>
+                        </div>
+                   </div>
+                   <button>See all (3)</button>
+                </div>
+                <footer>
+                    <a href="#">Help</a>
+                    <a href="#">Status</a>
+                    <a href="#">Writers</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Careers</a>
+                    <a href="#">Privacy</a>
+                    <a href="#">Terms</a>
+                    <a href="#">Abourt</a>
+                </footer>
             </section>
         </section>
     </main>
